2006-03-02  Wim Taymans  <wim@fluendo.com>

	* ext/amrnb/amrnbdec.c: (gst_amrnbdec_init),
	(gst_amrnbdec_setcaps), (gst_amrnbdec_chain),
	(gst_amrnbdec_state_change):
	* ext/amrnb/amrnbenc.c: (gst_amrnbenc_init),
	(gst_amrnbenc_setcaps), (gst_amrnbenc_chain),
	(gst_amrnbenc_state_change):
	* ext/amrnb/amrnbenc.h:
	* ext/amrnb/amrnbparse.c: (gst_amrnbparse_init),
	(gst_amrnbparse_query):
	Further fancyfication.
	Use _take to get writable data from the adapter.
	Precalc packet duration.
	Handle disconts.
	Forward _push to upstream.
	Post error messages when something goes wrong.
	Remove old code in amrnbparse.
	Don't ignore query results from upstream.

2006-03-02  Michael Smith  <msmith@fluendo.com>

	* ext/amrnb/amrnbenc.c: (gst_amrnbenc_chain):
	  The AMR encoder writes into the audio buffers it processes, so
	  use gst_buffer_make_writable() on buffers we might (they go through
	  an adapter, so there can be copying going on later anyway) be
	  encoding.

2006-03-01  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/mpegstream/gstmpegparse.c: (gst_mpeg_parse_pad_added),
	(gst_mpeg_parse_handle_src_query):
	  Declare variables at the beginning of a block and make
	  gcc-2.9x happy (fixes #328957; patch by: Jens Granseuer).

2006-03-01  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/asfdemux/gstasfdemux.c: (gst_asf_demux_handle_data):
	  Read packet size, sequence and padsize in right order again
	  (fixes #332796; patch by: Fabrizio Gennari).

2006-02-28  Edward Hervey  <edward@fluendo.com>

	* gst/iec958/ac3iec.c:
	Set a proper klass (Codec/Muxer/Audio) for the ElementDetails.

2006-02-27  Jan Schmidt  <thaytan@mad.scientist.com>

	* configure.ac:
	  Make the id3tag and mad checks check for both a header and the
	  appropriate library if the pkg-config is missing. (Closes #331842)
	  Split the id3tag and mad checks into 2 pieces. Sometime soon I might
	  do the same for the plugins themselves.
	  
2006-02-27  Luca Ognibene  <luogni at tin dot it>