@@ -1,3 +1,9 @@
+2006-03-07  Tim-Philipp Müller  <tim at centricular dot net>
+
+	* ext/mad/gstid3tag.c: (tag_list_to_id3_tag_foreach):
+	  Add support for writing the GST_TAG_ALBUM_VOLUME_NUMBER
+	  tag (#333683, patch by: Alex Lancaster).
+	  
 2006-03-02  Wim Taymans  <wim@fluendo.com>
 
 	* ext/amrnb/amrnbdec.c: (gst_amrnbdec_init),
